--- a/readme.html
+++ b/readme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Prot&eacute;g&eacute; 3.0 Build Instructions</title>
+<title>Prot&eacute;g&eacute; Build Instructions</title>
 <style type="text/css">
 <!--
 .bodyText {font-family:arial,geneva,verdana,helvetica,sans-serif;}
@@ -13,7 +13,7 @@
 <body class="bodyText">
 
 <div align="center">
-<span style="font-weight:bold; font-size:large;">Prot&eacute;g&eacute; 3.0 Build Instructions</span>
+<span style="font-weight:bold; font-size:large;">Prot&eacute;g&eacute; Build Instructions</span>
 </div><br><br>
 
 <span class="sectionHeaders">System Requirements</span><br><br>
