web site update changes

--- a/src/edu/stanford/smi/protege/resource/files/about.html
+++ b/src/edu/stanford/smi/protege/resource/files/about.html
@@ -15,7 +15,7 @@ For more information about Prot&eacute;g&eacute; go to
 
 <p>
 Please send bug reports, questions, and comments to the 
-<a href="http://protege.stanford.edu/lists.html">protege-discussion</a> 
+<a href="http://protege.stanford.edu/community/subscribe.html">protege-discussion</a> 
 mailing list. 
 </p>
 
@@ -31,7 +31,7 @@ with support from:
   <li>National Science Foundation</li>
 </ul>
 and with additional support from our 
-<a href="http://protege.stanford.edu/affiliatesprogram/index.html">affiliates</a>:
+<a href="http://protege.stanford.edu/community/education.html">affiliates</a>:
 <ul>
   <li>DaimlerChrysler</li>
   <li>iSOCO: Intelligent Software for the Networked Economy</li>
