fixed a broken link in html documentation

--- a/readme.html
+++ b/readme.html
@@ -21,7 +21,7 @@ You can retrieve our source code in one of two ways:
 
 <ul>
 	<li style="padding-bottom: 3px;">A stable version of the source code is made available in ZIP file format on the 
-	<a href="http://protege.stanford.edu/download.html" target="_blank">Downloads</a> page 
+	<a href="http://protege.stanford.edu/download/download.html" target="_blank">Downloads</a> page 
 	of our Web site each time we do a build.  After unzipping the source code, you will find the 
 	Ant build file &quot;build.xml&quot; in the root directory.</li>
 	<li>Bleeding-edge versions of our source code can be downloaded from our 
