--- a/src/edu/stanford/smi/protege/resource/files/about.html
+++ b/src/edu/stanford/smi/protege/resource/files/about.html
@@ -1,46 +1,46 @@
 <html>
+<head>
+<style>
+<!--
+.bodyText {font-family:Georgia; font-size:11px;}
+.bodyTextTitle {font-family:Arial,Helvetica,sans-serif; font-size:14px;}
+.copyright {font-family:Georgia; font-size:9px; color:#AE5B08;}
+-->
+</style>
+</head>
 
-<body>
-<center>
+<body class="bodyText" style="margin-left:5px;">
+
+<!-- protege logo -->
 <img src="logo.splash.plain.gif">
-<br>
-<big><b>Version {0}</b></big>
-<br>
-{1}
-<hr width=80% align=center>
-</center>
 
-For more information about Prot&eacute;g&eacute; go to  
-<a href="http://protege.stanford.edu">http://protege.stanford.edu</a>.
+<table width="90%" border="0">
+	<tr><td align="right"><span class="bodyTextTitle">Version {0} ({1})</span></td></tr>
+</table>
 
-<p>
-Please send bug reports, questions, and comments to the 
-<a href="http://protege.stanford.edu/community/subscribe.html">protege-discussion</a> 
-mailing list. 
-</p>
+<hr align="left" width="90%"><br>
 
-<p>
-Prot&eacute;g&eacute; was developed by 
-<a href="http://smi.stanford.edu">Stanford Medical Informatics</a> 
-with support from:
-<ul>
-  <li>Defense Advance Research Projects Agency</li>
-  <li>National Cancer Institute</li>
-  <li>National Institute of Standards and Technology</li>
-  <li>National Library of Medicine</li>
-  <li>National Science Foundation</li>
-</ul>
-and with additional support from our 
-<a href="http://protege.stanford.edu/community/education.html">affiliates</a>:
-<ul>
-  <li>DaimlerChrysler</li>
-  <li>iSOCO: Intelligent Software for the Networked Economy</li>
-</ul>
-</p>
+<div style="margin-right:33px;">
+For more information, visit the 
+<a href="http://protege.stanford.edu" target="_blank">Prot&eacute;g&eacute; Web site</a>.<br><br>
 
-<small>
-Copyright &copy; 1998-2005, Stanford University
-</small>
+Email bugs, questions, and comments to 
+<a href="https://mailman.stanford.edu/mailman/listinfo/protege-discussion">protege-discussion</a>.<br><br>
+
+Prot&eacute;g&eacute; was developed by <a href="http://smi.stanford.edu">Stanford Medical Informatics</a> with 
+support from:<br><br>
+
+- Defense Advance Research Projects Agency<br>
+- National Cancer Institute<br>
+- National Institute of Standards and Technology<br>
+- National Library of Medicine<br>
+- National Science Foundation<br><br>
+
+... and with additional support from our <a href="http://protege.stanford.edu/support/">affiliates</a>:<br><br>
+
+- DaimlerChrysler<br>
+- iSOCO: Intelligent Software for the Networked Economy<br><br>
+
+<span class="copyright">Copyright &copy; 1998-2006, Stanford University</span>
 </body>
-
 </html>
