--- a/src/edu/stanford/smi/protege/resource/files/about.html
+++ b/src/edu/stanford/smi/protege/resource/files/about.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<style>
+<style type="text/css">
 <!--
 .bodyText {font-family:Georgia; font-size:11px;}
 .bodyTextTitle {font-family:Arial,Helvetica,sans-serif; font-size:14px;}
@@ -12,7 +12,7 @@
 <body class="bodyText" style="margin-left:5px;">
 
 <!-- protege logo -->
-<img src="logo.splash.plain.gif">
+<img src="logo.splash.plain.gif" alt="">
 
 <table width="90%" border="0">
 	<tr><td align="right"><span class="bodyTextTitle">Version {0} ({1})</span></td></tr>
@@ -21,13 +21,13 @@
 <hr align="left" width="90%"><br>
 
 <div style="margin-right:33px;">
-For more information, visit the 
+For more information, visit the
 <a href="http://protege.stanford.edu" target="_blank">Prot&eacute;g&eacute; Web site</a>.<br><br>
 
-Email bugs, questions, and comments to 
-<a href="https://mailman.stanford.edu/mailman/listinfo/protege-discussion">protege-discussion</a>.<br><br>
+Email bugs, questions, and comments to
+<a href="http://mailman.stanford.edu/mailman/listinfo/protege-discussion">protege-discussion</a>.<br><br>
 
-Prot&eacute;g&eacute; was developed by <a href="http://smi.stanford.edu">Stanford Medical Informatics</a> with 
+Prot&eacute;g&eacute; was developed by <a href="http://smi.stanford.edu">Stanford Medical Informatics</a> with
 support from:<br><br>
 
 - Defense Advance Research Projects Agency<br>
