--- a/protege-core/trunk/src/edu/stanford/smi/protege/resource/files/about.html
+++ b/protege-core/trunk/src/edu/stanford/smi/protege/resource/files/about.html
@@ -53,20 +53,13 @@ a {text-decoration:none; color:#327BAA;} /* no underline for hyperlinks */
 	- National Institutes of Health's National Centers for Biomedical Computing<br>
 	- National Library of Medicine<br>
 	- National Science Foundation
-	
-	<p>
-	... and with additional support from our <a href="http://protege.stanford.edu/support/">affiliates</a>:
-	
-	<p>
-	- Active Software<br>
-	- Pfizer
 </div>
 
 <br><br>
-<span class="copyright">{3}</span><br>
-<div style="margin-top:3px;">
+<span class="copyright">{3}</span>
+
+<p>
 <a href="http://protegewiki.stanford.edu/wiki/HowToCiteProtege">Instructions for citing Prot&eacute;g&eacute;</a>
-</div>
 
 </body>
 </html>
